# trendradar-app

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile.railway  SETUP.md  docker-compose.yml  railway.json
.agents/: ARCHITECTURE.md  product-marketing-context.md  waitlist-integration.md
.agents/email-sequences/: waitlist.md
.claude/: CLAUDE.md  PROJECT.md
.github/workflows/: verify.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_add_waitlist.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: __init__.py  chat.py  health.py  waitlist.py
apps/api/app/core/: config.py  db.py  llm_router.py
apps/api/app/integrations/: __init__.py  email_templates.py  resend_client.py
apps/api/app/models/: __init__.py  chat.py  product.py  user.py  waitlist.py
apps/api/app/prompts/: picker.py
apps/api/app/schemas/: chat.py  waitlist.py
apps/api/scripts/: seed_products.py  smoke_test.py
apps/api/tests/: test_chat_candidates.py  test_config.py  test_waitlist.py
apps/web/: .eslintrc.json  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/public/: landing.html
apps/web/public/alternatives/: didadog.html  echotik.html  index.html  kalodata.html
apps/web/public/fonts/: fonts.css
apps/web/scripts/: copy-fonts.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/web-scaffold/: .env.example  .gitignore  README.md  package.json  tailwind.config.ts
(+7 files in other folders)
